...
fun CityButton(
    onClick: () -> Unit,
    modifier: Modifier = Modifier
) {
    Button(
        onClick = onClick,
        modifier = modifier.widthIn(min = 250.dp).testTag("START")
        //.background(MaterialTheme.colorScheme.background)
    ) {
        Text("Start", style = MaterialTheme.typography.titleMedium)
    }
}

...
