...
            .fillMaxHeight()
            .fillMaxWidth()
    ) { page ->
        Card(
            onClick = { onCardClicked(activitiesCategory[page]) },
            modifier = Modifier
                .width(350.dp).testTag("CARD")
                .height(300.dp)
                .graphicsLayer {
                    val pageOffset = calculateCurrentOffsetForPage(page).absoluteValue
                    lerp(
                        start = 0.85f,
                        stop = 1f,
...
